--- a/Project-1-Simon/index.html
+++ b/Project-1-Simon/index.html
@@ -21,7 +21,7 @@
       <div class="cell cell-green" value="3"></div>
       <div class="cell cell-yellow" value="4"></div>
     </div>
-    <button id="newGameBtn">New Game</button>
+    <button id="startGameBtn">Start Game</button>
     <button id="endGameBtn">Quit Game</button>
     <script src="js/script.js"></script>
   </body>
