correct level counter error and add message for incorrect pick

--- a/Project-1-Simon/index.html
+++ b/Project-1-Simon/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Simon Sez</h1>
     <div class="header">
-      <h2 class="errormsg">You Loose!</h2>
+      <h2 class="errormsg"></h2>
       <div class="counterContainer">
         <div class="counter label">Count</div>
         <div class="counter value">0</div>
