fixed timeout function MVP Bronze complete

--- a/Project-1-Simon/index.html
+++ b/Project-1-Simon/index.html
@@ -14,6 +14,10 @@
         <div class="counter label">Count</div>
         <div class="counter value">0</div>
       </div>
+      <div class="highScoreContainer">
+        <div class="counter highScoreLabel">High Score</div>
+        <div class="value highScoreValue">0</div>
+      </div>
     </div>
     <div class="board">
       <div class="cell cell-red" value="1"></div>
