added high score tracker MVP Silver

--- a/Project-1-Simon/index.html
+++ b/Project-1-Simon/index.html
@@ -18,7 +18,27 @@
         <div class="counter highScoreLabel">High Score</div>
         <div class="value highScoreValue">0</div>
       </div>
+      <!-- <div class="fastestContainer">
+        <div class="counter fastestLabel">Quickest</div>
+        <div class="value fastestalue">0</div>
+      </div> -->
     </div>
+    <!-- // on off switcht code from https://proto.io/freebies/onoff/ -->
+    <div class="onoffswitch">
+      <input
+        type="checkbox"
+        name="onoffswitch"
+        class="onoffswitch-checkbox"
+        id="myonoffswitch"
+        tabindex="0"
+        checked
+      />
+      <label class="onoffswitch-label" for="myonoffswitch">
+        <span class="onoffswitch-inner"></span>
+        <span class="onoffswitch-switch"></span>
+      </label>
+    </div>
+    <div class="timer">0:00</div>
     <div class="board">
       <div class="cell cell-red" value="1"></div>
       <div class="cell cell-blue" value="2"></div>
