--- a/Project-1-Simon/index.html
+++ b/Project-1-Simon/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <audio
+      id="greenBtnSound"
+      src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"
+    ></audio>
+    <audio id="redBtnSound">
+      <source src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" />
+      <source />
+    </audio>
+    <audio
+      id="yellowBtnSound"
+      src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"
+    ></audio>
+    <audio
+      id="blueBtnSound"
+      src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"
+    ></audio>
+    <audio
+      id="wrongSound"
+      src="http://www.freesound.org/data/previews/331/331912_3248244-lq.mp3"
+    ></audio>
+    <audio
+      id="gameWinSound"
+      src="http://commondatastorage.googleapis.com/codeskulptor-demos/pyman_assets/intromusic.ogg"
+    ></audio>
+
     <h1>Simon Sez</h1>
     <div class="header">
       <h2 class="errormsg"></h2>
