refactor CSS and Index.html for classic look - MVP Gold

--- a/Project-1-Simon/index.html
+++ b/Project-1-Simon/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simon Sez</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">
   </head>
   <body>
     <audio
@@ -32,7 +33,8 @@
       src="http://commondatastorage.googleapis.com/codeskulptor-demos/pyman_assets/intromusic.ogg"
     ></audio>
 
-    <h1>Simon Sez</h1>
+    <!-- <h1>Simon Sez</h1>
+
     <div class="header">
       <h2 class="errormsg"></h2>
       <div class="counterContainer">
@@ -42,36 +44,61 @@
       <div class="highScoreContainer">
         <div class="counter highScoreLabel">High Score</div>
         <div class="value highScoreValue">0</div>
-      </div>
+      </div> -->
       <!-- <div class="fastestContainer">
         <div class="counter fastestLabel">Quickest</div>
         <div class="value fastestalue">0</div>
       </div> -->
     </div>
-    <!-- // on off switcht code from https://proto.io/freebies/onoff/ -->
-    <div class="onoffswitch">
-      <input
-        type="checkbox"
-        name="onoffswitch"
-        class="onoffswitch-checkbox"
-        id="myonoffswitch"
-        tabindex="0"
-        checked
-      />
-      <label class="onoffswitch-label" for="myonoffswitch">
-        <span class="onoffswitch-inner"></span>
-        <span class="onoffswitch-switch"></span>
-      </label>
-    </div>
-    <div class="timer">0:00</div>
-    <div class="board">
+    
+    <!-- <div class="timer">0:00</div> -->
+    <div id="outerCircle">
       <div class="cell cell-red" value="1"></div>
       <div class="cell cell-blue" value="2"></div>
       <div class="cell cell-green" value="3"></div>
       <div class="cell cell-yellow" value="4"></div>
+      <div id='innerCircle'>
+        <div id="title" class="font-effect-emboss">SIMON</div>
+        <div id="switches">
+            <!-- <input type="checkbox" class="toggle" id="on"> -->
+            <button class="button" id="startGameBtn">Start</button>
+            <div id="countBox">
+                <div id="countDisplay">
+                    <div id="displayText">
+                        20
+                    </div>
+                </div>
+                <div id="countText">Count</div>
+            </div>
+            <div id="highLevelBox">
+                <div id="countDisplay">
+                    <div id="displayText">
+                        20
+                    </div>
+                </div>
+                <div id="countText">High Level</div>
+            </div>
+            <!-- // on off switcht code from https://proto.io/freebies/onoff/ --> 
+            <div class="difficultyswitch"> 
+                <input type="checkbox" name="difficultyswitch" class="difficultyswitch-checkbox" id="mydiffswitch" tabindex="0" checked />
+                <label class="difficultyswitch-label" for="mydiffswitch">
+                    <span class="difficultyswitch-inner"></span>
+                    <span class="difficultyswitch-switch"></span>
+                </label>
+            </div>
+            <div class="onoffswitch">
+                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" tabindex="0" checked />
+                <label class="onoffswitch-label" for="myonoffswitch">
+                    <span class="onoffswitch-inner"></span>
+                    <span class="onoffswitch-switch"></span>
+                </label>
+            </div>
+            <!-- <input type="checkbox" class="toggle" id="strict"> -->
+        </div>
+      </div>
     </div>
-    <button id="startGameBtn">Start Game</button>
-    <button id="endGameBtn">Quit Game</button>
-    <script src="js/script.js"></script>
+    <!-- <button id="startGameBtn">Start Game</button> -->
+    <!-- <button id="endGameBtn">Quit Game</button> -->
+    <!-- <script src="js/script.js"></script> -->
   </body>
 </html>
