js modificationat to match CSS and HTML - MVP Gold

--- a/Project-1-Simon/index.html
+++ b/Project-1-Simon/index.html
@@ -65,7 +65,7 @@
             <div id="startButtonTxt">Start</div>
             <div id="countBox">
                 <div id="countDisplay">
-                    <div id="displayText">
+                    <div class="currentlevel" id="displayText">
                         --
                     </div>
                 </div>
@@ -74,7 +74,7 @@
             </div>
             <div id="highLevelBox">
                 <div id="countDisplay">
-                    <div id="displayText">
+                    <div class="highlevel" id="displayText">
                         --
                     </div>
                 </div>
@@ -97,12 +97,10 @@
                     <span class="onoffswitch-switch"></span>
                 </label>
             </div>
-            <!-- <input type="checkbox" class="toggle" id="strict"> -->
+            <div class="credit">Mavrick Edition</div>
         </div>
       </div>
     </div>
-    <!-- <button id="startGameBtn">Start Game</button> -->
-    <!-- <button id="endGameBtn">Quit Game</button> -->
-    <!-- <script src="js/script.js"></script> -->
+    <script src="js/script.js"></script>
   </body>
 </html>
